# agentserve

./: .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: README.md  build-docs.yml  ci.yml  docs.yml  lint.yml  pull-request.yml  push-main.yml  release.yml  semantic-release.yml  test.yml
agentserve/: __init__.py  cli.py  deployment.py  logging_config.py  models.py
api/: index.html
docs/: api.md  examples.md  index.md
examples/: basic_example copy.py  basic_example.py  index.html  invoke.py
search/: search_index.json
tests/: test_deployment.py
