[tool.poetry]
name = "agentserve"
version = "0.1.0"
description = "A simple tool to deploy OpenAI Agents as FastAPI web services."
authors = ["Or Itzahary <or.itzary@blattnertech.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agentserve" }]
homepage = "https://github.com/superwise-ai/agentserve"
repository = "https://github.com/superwise-ai/agentserve"
keywords = ["openai", "agents", "fastapi", "api", "web-service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
openai-agents = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3